# sip-player

./: .gitignore  README.md  README_zh.md  pyproject.toml
src/: __init__.py  __main__.py  audio_import.py  i18n.py  persistence.py  playback.py  sip_stack.py  ui.py
