[project]
name = "sip-player"
version = "0.1.0"
description = "SIP music player with DTMF IVR (install pjsua2 wheel separately)"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
sip-player = "src.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

